Fix h1 spacing issue

--- a/style.scss
+++ b/style.scss
@@ -53,6 +53,7 @@ h1, h2, h3, h4, h5, h6 {
         font-size: 43px;
         letter-spacing: 1px;
         margin-bottom: 0;
+        display: inline;
         @include vendor(transition, all 0.3s ease);
     }
     em {
